[workspace]
resolver = "2"
members = [
  "contracts/*"
]

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/Meteor-Wallet/mnear-contract"

[workspace.dependencies]
near-sdk = { version = "5.14.0", features = ["unstable", "unit-testing"] }
near-contract-standards = "5.14.0"
uint = { version = "0.10.0", default-features = false }
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.5.0" }
thiserror = "2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
