[package]
name = "lst"
version = "1.0.1"
license = "MIT"
edition.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.0-rust-1.86.0"
image_digest = "sha256:3220302ebb7036c1942e772810f21edd9381edf9a339983da43487c77fbad488"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
near-plugins.workspace = true
uint.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-workspaces = { version = "0.20", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }

[features]
test = []
